Fixes CSS: works decently on IE6, Opera9 & FF.
Breaks in IE 5.5

Not testested in IE7



git-svn-id: https://hackers.infoarena.ro/dav-svn/trunk@440 ddd5704e-cc05-0410-ac10-d31acb56fd8e

--- a/infoarena2/www/static/css/screen.css
+++ b/infoarena2/www/static/css/screen.css
@@ -109,17 +109,16 @@ The basic layout of the homepage is as follows:
     min-width:750px;
     margin:0 20px;
     text-align:left;
-    background:#fff url(../images/top.gif) no-repeat top center;
-    /*border:1px solid #9CA29E;*/
 }
 
 #content_small {
     background:url(../images/main_small.jpg) repeat-y ;
+    clear: both;
 }
 
 #sidebar {
-    width:191px;
-    float:left;
+    width: 191px;
+    float: left;
 }
 
 #main {
@@ -227,15 +226,13 @@ The basic layout of the homepage is as follows:
 
 #nav li {
     display:block;
-    /*border-bottom:1px solid #D3D1C6;
-    border-top:1px solid #F6F4E8;
-    background:url(../images/menu_li.gif) repeat-x bottom left;*/
-    font-size:12px;
+    font-size: 10pt;
 }
 
 #nav li a {
     display:block;
-    padding:3px 15px;
+    width: 80%;
+    padding: 3px 15px;
     color:#6A6A6B;
     text-decoration:none;
     background:url(../images/bullet.gif) no-repeat 3px center ;
@@ -246,23 +243,17 @@ The basic layout of the homepage is as follows:
     background:#FFEFB1 url(../images/bullet.gif) no-repeat 3px center ;
 }
 
-#nav li.separator hr {
+#nav li.separator {
+    padding: 0;
+    width: 97%;
     height: 1px;
     border: 0;
     background-color: silver;
+    font-size: 0;
 }
 
-#nav li.current a {
-    font-weight:bold;
-    background:url(../images/bullet_current.gif) no-repeat 2px center ;
-    font-variant:small-caps;
-    color:#333;
-}
-
-
-#nav li.current a:hover {
-    color:#333;
-    background:#FFEFB1 url(../images/bullet_current.gif) no-repeat 2px center ;
+#nav li.separator hr {
+    display: none;
 }
 
 /* sidebar :: login box */
@@ -503,6 +494,7 @@ fieldset {
     border-color: silver;
     border-collapse: collapse;
     width: 50%;
+    display: block;
 }
 
 legend {
@@ -517,6 +509,7 @@ ul.form {
 
 ul.form li {
     margin: .5em 0 .5em 0;
+    height: 1%;
 }
 
 ul.form label {
@@ -697,7 +690,7 @@ form.round li#field_tasks select {
 
 /* Basic table css */
 table {
-    width: 100%;
+    width: 99%; /* IE fix */
     border-collapse: collapse;
 }
 
@@ -707,12 +700,12 @@ table td, table th {
     padding-right: 0.5ex;
 }
 
-tr.odd {
+tr.odd td {
     background: #fff;
 }
 
-tr.even {
-    background: #eee;
+tr.even td {
+    background: #f5f5f5;
 }
 
 th {
