--- a/infoarena2/www/static/css/sitewide.css
+++ b/infoarena2/www/static/css/sitewide.css
@@ -22,11 +22,18 @@
 
 #header #search input {
     vertical-align:middle;
+    padding: 0;
+    font-size: 10pt;
 }
 
 #header #search #inputbox {
     width:120px;
 }
+
+/* Don't ask. (harmless) CSS hack */
+/* \*/
+* html .hollyfix {height: 1%;}
+*/* */
 
 /* site footer */
 #footer {
